<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/local_storage_type"/>

        <Button
            android:id="@+id/btnExportXlsAppStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#80CBC4"
            android:text="@string/export_to_XLS_app_storage"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnImportXlsAppStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#80CBC4"
            android:text="@string/import_from_XLS_app_storage"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnExportXlsSharedStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A5D6A7"
            android:text="@string/export_to_XLS_shared_storage"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnImportXlsSharedStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A5D6A7"
            android:text="@string/import_from_XLS_shared_storage"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnExportPdfSharedStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9FA8DA"
            android:text="@string/export_to_PDF_shared_storage"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnImportPdfSharedStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9FA8DA"
            android:text="@string/import_from_PDF_shared_storage"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>